syntax = "proto3";

package Hello.v1;

message HelloRequest {
    string first_name = 1;
    string last_name = 2;
}

message HelloResponse  {
   string message = 1;
}

service Hello {
    rpc Greeting (HelloRequest) returns (HelloResponse);
}
